--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,9 +28,72 @@ dev = [
 ]
 
 [tool.setuptools]
-packages = ["app"]  # alembicはマイグレーションスクリプトなのでパッケージとして含めません
+packages = ["app"] 
 
 [dependency-groups]
 dev = [
     "ruff>=0.11.2",
 ]
+
+[tool.ruff]
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+]
+
+line-length = 79
+indent-width = 4
+
+[tool.ruff.lint]
+select = [
+    "E4", 
+    "E7", 
+    "E9", 
+    "F", 
+    "B",
+    "I",
+]
+ignore = [
+    "E501",
+    "B008",
+]
+unfixable = [
+    "B"
+]
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["E402"]
+"**/{tests,docs,tools}/*" = ["E402"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = false
+docstring-code-line-length = "dynamic"
