--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "mysqlclient>=2.2.7",
     "pydantic-settings>=2.8.1",
     "pymysql>=1.1.1",
+    "pytest>=8.3.5",
     "pyyaml>=6.0.2",
     "sqlalchemy>=2.0.39",
 ]
@@ -25,6 +26,12 @@ dev = [
     "black>=23.3.0",
     "isort>=5.12.0",
     "mypy>=1.3.0",
+]
+
+test = [
+    "pytest>=7.3.1",
+    "pytest-cov>=4.1.0",
+    "httpx>=0.28.1",
 ]
 
 [tool.setuptools]
@@ -97,3 +104,9 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 docstring-code-format = false
 docstring-code-line-length = "dynamic"
+
+[tool.pytest.ini_options]
+testpaths = ["test"]
+python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
