--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "cryptography>=44.0.2",
     "fastapi[standard]>=0.115.12",
     "mysqlclient>=2.2.7",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.8.1",
+    "pyjwt>=2.10.1",
     "pymysql>=1.1.1",
     "pytest>=8.3.5",
     "pyyaml>=6.0.2",
