--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,16 @@
 # Docker
-HEALTHCHECK_INTERVAL=10s
-HEALTHCHECK_TIMEOUT=5s
-HEALTHCHECK_RETRIES=5
-HEALTHCHECK_START_PERIOD=30s
+HEALTHCHECK_INTERVAL=
+HEALTHCHECK_TIMEOUT=
+HEALTHCHECK_RETRIES=
+HEALTHCHECK_START_PERIOD=
 
 
 # Backend
 BACKEND_CONTAINER_PORT=
 BACKEND_LOCAL_PORT=
-
+SECURITY_KEY=
+ALGORITHM=
+ACCESS_TOKEN_EXPIRE_MINUTES=
 
 # Database
 DB_CONTAINER_NAME=
@@ -17,4 +19,4 @@ DB_DATABASE=
 DB_USER=
 DB_PASSWORD=
 DB_ROOT_PASSWORD=
-DB_URL=mysql+pymysql://${DB_USER}:${DB_PASSWORD}@${DB_CONTAINER_NAME}:${DB_CONTAINER_PORT}/${DB_DATABASE}
+DATABASE_URL=
