--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = migrations
 prepend_sys_path = .
-sqlalchemy.url = mysql+pymysql://root:password@localhost:3306/fastapi_db
+sqlalchemy.url = mysql+pymysql://user:password@db:3306/app_db
 
 [loggers]
 keys = root,sqlalchemy,alembic
