--- a/compose.yml
+++ b/compose.yml
@@ -12,8 +12,8 @@ services:
         condition: service_healthy
     networks:
       - app-network
-    environment:
-      - DATABASE_URL=${DB_URL}
+    # environment:
+    #   - DATABASE_URL=${DATABASE_URL}
     volumes:
       - ./backend/app:/app/app
       - ./backend/migrations:/app/migrations
@@ -52,3 +52,4 @@ networks:
 
 volumes:
   db-data:
+    name: db-data
