--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,12 +12,14 @@ dependencies = [
     "alembic>=1.15.1",
     "cryptography>=44.0.2",
     "fastapi[standard]>=0.115.12",
+    "httpx>=0.28.1",
     "mysqlclient>=2.2.7",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.8.1",
     "pyjwt>=2.10.1",
     "pymysql>=1.1.1",
     "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
     "pyyaml>=6.0.2",
     "sqlalchemy>=2.0.39",
 ]
@@ -112,3 +114,4 @@ testpaths = ["test"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+cache_dir = "/tmp/.pytest_cache"
